--- a/dlg.ui
+++ b/dlg.ui
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <object class="GtkWindow" id="win1">
+    <signal name="destroy" handler="on_win1_destroy" swapped="no"/>
     <child>
       <object class="GtkBox">
         <child>
           <object class="GtkButton" id="close_button">
-            <property name="label" translatable="yes">Mach putt</property>
-            <property name="use-underline">True</property>
-            <!--<signal name="clicked" handler="ok_button_clicked"/>-->
+            <property name="label" translatable="yes">close</property>
+            <signal name="clicked" handler="on_close_button_clicked"/>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="ok_button">
+            <property name="label" translatable="yes">ok</property>
+            <signal name="clicked" handler="on_ok_button_clicked"/>
           </object>
         </child>
       </object>
