--- a/UI/oneway.ui
+++ b/UI/oneway.ui
@@ -1,11 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.96.1 -->
 <interface>
-  <!-- interface-name bb.ui -->
-  <requires lib="gtk" version="4.8"/>
-
-
-
+  <!-- interface-name oneway.ui -->
+  <requires lib="gtk" version="4."/>
   <object class="GtkApplicationWindow" id="win1">
     <property name="default-height">300</property>
     <property name="default-width">400</property>
