feat: Implementiere alle GtkWindows Funktionen
Alle GtkWindows Funktionen, die nicht auf GtkWidgets ausser das durch
die id angesprochene verweisen werden durch Funktionssignaturen
implementiert. So haben Callbacks mit gleicher Signatur immer die selbe
Implementierung.

Weiterhin wurde ein zweiter Parameter eingeführt. Der Parametertrenner
kann jetzt auch ein Pipesymbol sein - dieses wird verwendet, wenn das
erste Zeichen des übergebenen Strings ein Pipesymbol ist. So können
Strings mit Leerzeichen als Argument übergeben werden.

Von den übergebenen Argumenten werden die führenden Blanks entfernt.

--- a/UI/handlers.ui
+++ b/UI/handlers.ui
@@ -25,6 +25,12 @@
           </object>
         </child>
         <child>
+          <object class="GtkButton" id="gtk_window_set_auto_startup_notification">
+            <property name="label">gtk_window_set_auto_startup_notification</property>
+            <signal name="clicked" handler="on_button_gtk_window_set_auto_startup_notification_clicked"/>
+          </object>
+        </child>
+        <child>
           <object class="GtkButton" id="gtk_window_get_set_title">
             <property name="label">gtk_window_get_set_title</property>
             <signal name="clicked" handler="on_button_gtk_window_get_set_title_clicked"/>
