refactor: Verwende Macros für table,signatur,func
Das erste Macropaar erstellt für Funktionen, die const char* zurückgeben
und einen Gtk Pointer als Argument haben.

Das erste Macro implementiert die Erzeugung der neuen Tabelle
und definiert die Signatur.
Das zweite Macro sucht in der Tabelle,
führt bei Erfolg die gtk Funktion aus
und gibt deren Rückgabewert zurück an die Bash

Das wesentliche Argument für beide Macros ist der GtkKlassenName.
Das zweite Macro braucht noch den Namen des Gtk Cast-defines.

--- a/UI/handlers.ui
+++ b/UI/handlers.ui
@@ -25,6 +25,12 @@
           </object>
         </child>
         <child>
+          <object class="GtkButton" id="gtk_widget_get_name">
+            <property name="label">gtk_widget_get_name</property>
+            <signal name="clicked" handler="on_button_gtk_widget_get_name_clicked"/>
+          </object>
+        </child>
+        <child>
           <object class="GtkButton" id="gtk_window_set_auto_startup_notification">
             <property name="label">gtk_window_set_auto_startup_notification</property>
             <signal name="clicked" handler="on_button_gtk_window_set_auto_startup_notification_clicked"/>
