refactor: Definiere Macros bis 6 Paramater

--- a/UI/handlers.css
+++ b/UI/handlers.css
@@ -1,6 +1,11 @@
 .show {
     background-color: lavender;
 }
+.rahmen {
+    border-width: 2px;
+    border-style: dashed;
+    border-color: darkgray;
+}
 .green {
     background-color: greenyellow;
 }
